// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeView matches snapshot (coordinator) 1`] = `
<div
  className="home-view app-view"
>
  <Memo(StatusCard) />
  <Memo(DatasourcesCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "msqe": false,
        "overlord": false,
        "queryType": "none",
        "warnings": Array [],
      }
    }
  />
  <Memo(SegmentsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "msqe": false,
        "overlord": false,
        "queryType": "none",
        "warnings": Array [],
      }
    }
  />
  <Memo(ServicesCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "msqe": false,
        "overlord": false,
        "queryType": "none",
        "warnings": Array [],
      }
    }
  />
  <Memo(LookupsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "msqe": false,
        "overlord": false,
        "queryType": "none",
        "warnings": Array [],
      }
    }
  />
</div>
`;

exports[`HomeView matches snapshot (full) 1`] = `
<div
  className="home-view app-view"
>
  <Memo(StatusCard) />
  <Memo(DatasourcesCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "msqe": true,
        "overlord": true,
        "queryType": "nativeAndSql",
        "warnings": Array [],
      }
    }
  />
  <Memo(SegmentsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "msqe": true,
        "overlord": true,
        "queryType": "nativeAndSql",
        "warnings": Array [],
      }
    }
  />
  <Memo(SupervisorsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "msqe": true,
        "overlord": true,
        "queryType": "nativeAndSql",
        "warnings": Array [],
      }
    }
  />
  <Memo(TasksCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "msqe": true,
        "overlord": true,
        "queryType": "nativeAndSql",
        "warnings": Array [],
      }
    }
  />
  <Memo(ServicesCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "msqe": true,
        "overlord": true,
        "queryType": "nativeAndSql",
        "warnings": Array [],
      }
    }
  />
  <Memo(LookupsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "msqe": true,
        "overlord": true,
        "queryType": "nativeAndSql",
        "warnings": Array [],
      }
    }
  />
</div>
`;

exports[`HomeView matches snapshot (overlord) 1`] = `
<div
  className="home-view app-view"
>
  <Memo(StatusCard) />
  <Memo(SupervisorsCard)
    capabilities={
      Capabilities {
        "coordinator": false,
        "msqe": false,
        "overlord": true,
        "queryType": "none",
        "warnings": Array [],
      }
    }
  />
  <Memo(TasksCard)
    capabilities={
      Capabilities {
        "coordinator": false,
        "msqe": false,
        "overlord": true,
        "queryType": "none",
        "warnings": Array [],
      }
    }
  />
</div>
`;
